# ai-orchestrator

./: .gitignore  config 48gb Duo.yaml  config 80GB Duo.yaml  config.yaml  control_api.py  launch.sh  pyproject.toml  setup.cfg  state.json
Inspirations/: bootstrap full script.sh  control.sh  deploy via API.sh  whisper.sh
Inspirations/Script #1/: High Reasoning DUO.sh  implementation_plan.md
Inspirations/Script #2/: modeldownload.sh  readme.md  topscript.sh  vllm serve commands.sh
combos/neuroflow/: bootstrap.sh  combo.yaml  neuroflow-runtime-probes.json  neuroflow-runtime.json
combos/reasoning_80gb/: bootstrap.sh  combo.yaml
configs/: neuroflow.yaml  reasoning_80gb.yaml
docs/: ChatGPT + VS Code Safe Refactoring Workflow (Patch-Based).md  ai-orchestrator Documentation Structure.md
docs/00_overview/: architecture_principles.md  system_invariants.md  system_layers.md  system_vision.md
tests/: test_bootstrap_script_limits.py  test_cli_gpu_type_output.py  test_cli_start_command.py  test_config_loader.py  test_deepseek_plugin.py  test_devserver_docs_ui.py  test_orchestrator_bootstrap_injection.py  test_orchestrator_idle_timeout.py  test_orchestrator_instance_readiness.py  test_orchestrator_output.py  test_plugin_contract.py  test_provider_interface.py  test_registry_determinism.py  test_runtime_bootstrap.py  test_runtime_bootstrap_script.py  test_runtime_healthcheck.py  test_runtime_snapshot.py  test_selection_engine.py  test_sizing_engine.py  test_vast_provider.py  test_vast_provider_bootstrap_injection.py  test_vast_provider_retry.py
(+218 files in other folders)
